--- a/kitdofa.html
+++ b/kitdofa.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
 
     
 
@@ -137,9 +137,7 @@
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
             <img src="assets/images/20200131-132319-4-1746x1240.png" alt="Mobirise" title="">
-            <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                <div class="pb-5 px-3 mbr-white align-center mbr-fonts-style display-1"></div>
-            </figcaption>
+            
         </div>
     </figure>
 </section>
