--- a/kitdofa.html
+++ b/kitdofa.html
@@ -56,12 +56,12 @@
                     <a class="nav-link link text-white display-4" href="espacodofa.html"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>Fãs
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="espacodofa.html#form3-g">Lista de E-mail</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="epk.html" target="_blank">Contratar</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
 
     
 
