--- a/espacodofa.html
+++ b/espacodofa.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -194,14 +194,14 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="align-center pb-2 mbr-fonts-style display-1">Entre na Lista de Fãs!</h2>
-                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-4">&nbsp;Põe o teu melhor email para receber o nosso KIT de fã da Lady Newton.<br>(Hqs em pdf, videos INÉDITOS, os melhores memes e vale brindes!)<br><br>&nbsp;Os fãs que estão na nossa lista recebem as novidades em primeira mão e tem acesso a um conteúdo diferenciado!<br><br>A gente ODEIA spam e jamais iremos inundar a sua preciosa caixa de e-mails, pode confiar :D</h3>
+                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-4">&nbsp;Põe o teu melhor email para receber o nosso KIT DIGITAL de fã da Lady Newton.<br>(Hqs em pdf, videos INÉDITOS, os melhores memes e vale brindes!)<br><br>&nbsp;Os fãs que estão na nossa lista recebem as novidades em primeira mão e tem acesso a um conteúdo diferenciado!<br><br>A gente ODEIA spam e jamais iremos inundar a sua preciosa caixa de e-mails, pode confiar :D</h3>
             </div>
         </div>
 
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yrYrLlTrgs8/EPkOICvk3PIJpJVPp4DxAqqn1HUn7UDo8RqH0V3aOwQczdtk0kUEYMrX7z/QitVJjWy0NJVYcVtgJpzNJD+vT4TjlqxrW5pJZ6tpaYTnPKJaomTZ9edY.tr0lwbhR4+agPK9hXAG5PpghL++TExSnlri0tvxr14OZqwVe8TxV3k1l8s9TH00dg2N7Av92ZGzFMJEgbppfMmMB8rOxUf00IhPLqSaI7jcaCsppjpq/xk4jxEY4tBsL">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I3COAb3PNBOItHdh3Dt+2zpUptEK/lo2QHTWFsoDBz+x0Ujy7yYjHjAA8aif71WxayURFbzra/+gPZ+P57fATpFKV4bIT+3ZRLitQlYDd3af5jWXZII0VyZhqC6zUcae.ElUeN8ERpczqJheavVBxBXck3s1qxMyPNdvorNZglx/RSufHiGHg2JO7579qJuwGKC39gow4ornG1g3BZp+lFD01CZeZXsBQ662sz3W0f5gCOd6/VcQVCO80HSTpQXcd">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -211,7 +211,7 @@
                         <div class="form-group col" data-for="email">
                             <input type="email" name="email" placeholder="Seu melhor e-mail" data-form-field="Email" required="required" class="form-control display-7" id="email-form3-g">
                         </div>
-                        <div class="col-auto input-group-btn"><button type="submit" class="btn  btn-secondary display-4">QUERO RECEBER O KIT!</button></div>
+                        <div class="col-auto input-group-btn"><button type="submit" class="btn  btn-secondary display-4">Me Inscrever!</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
