--- a/index.html
+++ b/index.html
@@ -155,8 +155,15 @@
     </div>
 </section>
 
-<div class="modal mbr-popup cid-rR3DtPahik fade" tabindex="-1" role="dialog" data-on-timer-delay="3" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-2k" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+<section class="popup-builder cid-rR3DtPahik" id="mbr-popup-2k">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0); top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: 0;">
+    </div>
+
+    <div class="modal mbr-popup" tabindex="-1" role="dialog" data-on-timer-delay="3" data-overlay-color="#000000" data-overlay-opacity="0.8">
+        <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-1">Seja um fã especial!</h5>
@@ -189,6 +196,8 @@
             </div>
         </div>
 
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
@@ -202,9 +211,6 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/popup-plugin/script.js"></script>
-  <script src="assets/popup-ontimer-plugin/script.js"></script>
-  <script src="assets/popup-overlay-plugin/script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
